# csworld

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  camera.cc  camera.h  chunk.cc  chunk.h  chunk_lod.h  common.cc  common.h  db_manager.cc  db_manager.h  fragment.glsl  input.cc  input.h  item.h  lod_loader.cc  lod_loader.h  lod_mesh_generator.cc  lod_mesh_generator.h  main.cc  mesh_generator.cc  mesh_generator.h  mesh_utils.cc  mesh_utils.h  options.cc  options.h  player.cc  player.h  region.cc  region.h  render_utils.cc  render_utils.h  renderer.cc  renderer.h  section.cc  (+24 more)
cef_subprocess/: cef_subprocess.cc  cef_subprocess_win.cc  renderer_app.cc  renderer_app.h  v8_handler.cc  v8_handler.h
client/: build_camera.cc  build_camera.h  build_controller.cc  build_controller.h  build_render_mode.cc  build_render_mode.h  camera.cc  camera.h  chunk.cc  chunk.h  db_manager.cc  disabled_controller.cc  disabled_controller.h  draw_generator.h  first_person_camera.cc  first_person_camera.h  first_person_controller.cc  first_person_controller.h  first_person_render_mode.cc  first_person_render_mode.h  game_object.cc  game_object.h  input.cc  input.h  inventory_controller.cc  inventory_controller.h  item.cc  lod_loader.cc  lod_mesh_generator.cc  lod_mesh_generator.h  main.cc  mesh_generator.cc  mesh_generator.h  mesh_utils.cc  nuklear_glfw_gl4.h  options.cc  options.h  player.cc  player.h  poisson_disk_sampling.h  (+33 more)
client/GameObjects/: game_object.cc  game_object.h  ground_selection.cc  ground_selection.h  pawn.h
client/WorldGeneration/: world_editor.cc  world_editor.h  world_generator.cc  world_generator.h
client/assets/ui/: index.html
client/assets/ui/assets/: index-BBeKNRKZ.js  index-Bcu6_Ade.js  index-C-VxiuMH.css
client/shaders/: cb.vs  common.glsl  composite.fs  composite.vs  drag_quad.fs  drag_quad.vs  final.fs  final.vs  ground_selection.fs  ground_selection.vs  irregular.fs  irregular.vs  irregular_shadow.fs  irregular_shadow.gs  irregular_shadow.vs  lod.fs  lod.vs  quad.vs  shadow.glsl  sky.fs  sky_lut.fs  sky_quad.vs  ssao.fs  ssao_apply.fs  ssao_blur.fs  ssao_quad.vs  ssr.glsl  terrain.fs  terrain.vs  terrain_shadow.gs  terrain_shadow.vs  ui.fs  voxel_highlight.fs  voxel_highlight.vs  water.fs  water.vs
client/src/: action.h  build_camera.cc  build_camera.h  build_render_mode.cc  camera.cc  camera.h  chunk.cc  chunk.h  chunk_lod.cc  chunk_lod.h  cs_math.h  db_manager.cc  db_manager.h  draw_generator.cc  first_person_camera.cc  first_person_render_mode.cc  flag_manager.h  item.h  lod_loader.cc  lod_mesh_generator.cc  main.cc  material.cc  material.h  mesh_generator.cc  mesh_generator.h  nuklear_glfw_gl4.h  options.cc  options.h  player.cc  player.h  region.cc  region.h  render_mode.h  render_utils.cc  render_utils.h  renderer.cc  renderer.h  scene_component.cc  section.cc  section.h  (+19 more)
client/src/GameObjects/: game_object.cc  game_object.h  ground_selection.cc  ground_selection.h  pawn.h
client/src/UI/: cefmsg.cc  cefmsg.h  cefui.cc  cefui.h  cefui_win.h  dev_tools_handler.cc  dev_tools_handler.h  local_resource_handler.cc  local_resource_handler.h  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h  simple_handler_win.cc  ui_app.cc  ui_app.h  ui_client.cc  ui_client.h
client/src/UserControllers/: build_controller.cc  disabled_controller.cc  first_person_controller.cc  inventory_controller.cc  options_controller.cc  options_controller.h  user_controller.h
client/src/WorldGeneration/: world_editor.cc  world_editor.h  world_generator.cc  world_generator.h
common/: common.cc  common.h  config.h.in
ext/: nuklear.h
ext/include/: cef_color_ids.h  cef_command_ids.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
fbs/: common.fbs  cs.fbs  request.fbs  update.fbs
server/: Makefile  chunk.cc  chunk.h  http_client.cc  main.cc  region.cc  region.h  sim_server.cc  sim_server.h  tcp_connection.cc  tcp_connection.h  tcp_server.h  types.h  world_generator.cc  world_generator.h
server/src/: chunk.cc  chunk.h  http_client.h  main.cc  region.h  sim_server.cc  sim_server.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h  types.h  world_generator.cc  world_generator.h
shaders/: blur.fs  blur.vs  cb.fs  cb.vs  common.glsl  composite.fs  composite.vs  final.fs  final.vs  fragment.glsl  irregular.vs  irregular_shadow.fs  irregular_shadow.vs  lod.fs  lod.vs  multiscattering.comp  shadow.glsl  shadow.gs  sky.fs  sky.vs  sky_fragment.glsl  sky_vertex.glsl  ssr.glsl  terrain.fs  terrain.vs  terrain_shadow.vs  transmittance.comp  ui.fs  ui.vs  vertex.glsl  voxel_highlight.fs  voxel_highlight.vs  voxel_highlight_fragment.glsl  water.fs  water.vs  window_fragment.glsl
